--- a/static/index.html
+++ b/static/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live Transcription Dashboard</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=JetBrains+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=JetBrains+Mono&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <div class="dashboard">
         <header>
@@ -56,10 +59,22 @@
                         </div>
                     </div>
                 </section>
+
+                <section class="config-section">
+                    <h3>Settings</h3>
+                    <div class="stat-item full">
+                        <label>Audio History</label>
+                        <div class="input-group">
+                            <input type="number" id="history-limit" value="10" min="1" max="50">
+                            <span>Segments</span>
+                        </div>
+                    </div>
+                </section>
             </aside>
         </main>
     </div>
 
     <script src="app.js"></script>
 </body>
+
 </html>
