--- a/static/index.html
+++ b/static/index.html
@@ -18,6 +18,9 @@
                 <div id="status-badge" class="badge">Disconnected</div>
             </div>
             <div class="header-right">
+                <button id="theme-toggle" class="btn-icon" title="Toggle Light/Dark Mode">
+                    <span id="theme-icon">🌙</span>
+                </button>
                 <button id="audio-toggle" class="btn-primary">
                     <span class="icon">🔇</span> Enable Audio
                 </button>
