add mobile support

--- a/static/index.html
+++ b/static/index.html
@@ -21,6 +21,9 @@
                 <button id="theme-toggle" class="btn-icon" title="Toggle Light/Dark Mode">
                     <span id="theme-icon">🌙</span>
                 </button>
+                <button id="sidebar-toggle" class="btn-icon" title="Toggle Settings" style="display: none;">
+                    <span>⚙️</span>
+                </button>
                 <button id="audio-toggle" class="btn-primary">
                     <span class="icon">🔇</span> Enable Audio
                 </button>
