add gpu support

--- a/static/index.html
+++ b/static/index.html
@@ -78,8 +78,7 @@
                     <div id="watchwords-list" class="tag-list">
                         <!-- Watchword tags will appear here -->
                     </div>
-                    <button id="enable-notifications" class="btn-secondary full-width"
-                        style="display: none; margin-top: 12px;">
+                    <button id="enable-notifications" class="btn-secondary full-width" style="margin-top: 12px;">
                         🔔 Enable Desktop Alerts
                     </button>
                 </section>
