--- a/static/index.html
+++ b/static/index.html
@@ -92,6 +92,10 @@
                             <span>Segments</span>
                         </div>
                     </div>
+                    <button id="clear-history" class="btn-text"
+                        style="color: var(--accent); margin-top: 10px; width: 100%; text-align: center;">
+                        🗑️ Clear All History
+                    </button>
                 </section>
             </aside>
         </main>
