--- a/static/index.html
+++ b/static/index.html
@@ -83,6 +83,16 @@
                     </button>
                 </section>
 
+                <section class="speaker-filter-section">
+                    <div class="section-header">
+                        <h3>Speaker Filters</h3>
+                        <button id="reset-filters" class="btn-text">Show All</button>
+                    </div>
+                    <div id="speaker-filters" class="tag-list">
+                        <!-- Speaker filter chips will appear here -->
+                    </div>
+                </section>
+
                 <section class="config-section">
                     <h3>Settings</h3>
                     <div class="stat-item full">
