--- a/static/index.html
+++ b/static/index.html
@@ -96,10 +96,11 @@
                 <section class="config-section">
                     <h3>Settings</h3>
                     <div class="stat-item full">
-                        <label>Audio History</label>
+                        <label>History</label>
                         <div class="input-group">
                             <input type="number" id="history-limit" value="100" min="1" max="500">
                             <span>Segments</span>
+                            <button id="apply-history-limit" class="btn-small" style="margin-left: 8px;">Apply</button>
                         </div>
                     </div>
                     <button id="clear-history" class="btn-text"
