--- a/static/index.html
+++ b/static/index.html
@@ -34,7 +34,12 @@
             <section class="feed-section">
                 <div class="section-header">
                     <h2>Transcription Feed</h2>
-                    <span id="speaker-count" class="text-muted">0 Speakers Detected</span>
+                    <div class="section-header-right">
+                        <button id="scroll-lock" class="btn-icon" title="Scroll Lock (auto-engages when scrolling up)">
+                            <span id="scroll-lock-icon">🔓</span>
+                        </button>
+                        <span id="speaker-count" class="text-muted">0 Speakers Detected</span>
+                    </div>
                 </div>
                 <div id="transcript-feed" class="transcript-container">
                     <!-- Transcripts will appear here -->
