fix scroll lock ui

--- a/static/index.html
+++ b/static/index.html
@@ -35,8 +35,9 @@
                 <div class="section-header">
                     <h2>Transcription Feed</h2>
                     <div class="section-header-right">
-                        <button id="scroll-lock" class="btn-icon" title="Scroll Lock (auto-engages when scrolling up)">
-                            <span id="scroll-lock-icon">🔓</span>
+                        <button id="scroll-lock" class="btn-icon scroll-status"
+                            title="Auto-scrolling - Scroll up to pause">
+                            <span id="scroll-lock-icon">▼ LIVE</span>
                         </button>
                         <span id="speaker-count" class="text-muted">0 Speakers Detected</span>
                     </div>
