--- a/static/index.html
+++ b/static/index.html
@@ -84,6 +84,19 @@
                     <div id="watchwords-list" class="tag-list">
                         <!-- Watchword tags will appear here -->
                     </div>
+                    <div id="watchword-nav" class="watchword-nav hidden">
+                        <div class="nav-controls">
+                            <button id="prev-match" class="btn-nav" title="Previous match">◀</button>
+                            <span id="match-counter" class="match-counter">0/0</span>
+                            <button id="next-match" class="btn-nav" title="Next match">▶</button>
+                        </div>
+                        <button id="filter-matches" class="btn-filter" title="Show only matches">
+                            <span id="filter-icon">👁</span> All
+                        </button>
+                    </div>
+                    <div id="match-timeline" class="match-timeline hidden">
+                        <!-- Timeline markers will appear here -->
+                    </div>
                     <button id="enable-notifications" class="btn-secondary full-width" style="margin-top: 12px;">
                         🔔 Enable Desktop Alerts
                     </button>
