add background playing of sound on mobile

--- a/static/index.html
+++ b/static/index.html
@@ -137,6 +137,8 @@
         </main>
     </div>
 
+    <!-- Hidden audio element for backgrounding support -->
+    <audio id="silent-audio" loop playsinline src="silence.wav"></audio>
     <script src="app.js"></script>
 </body>
 
