fix cpu fallback

--- a/static/index.html
+++ b/static/index.html
@@ -42,6 +42,9 @@
                         <span id="speaker-count" class="text-muted">0 Speakers Detected</span>
                     </div>
                 </div>
+                <!-- System Alerts Container -->
+                <div id="system-alerts" class="alerts-container"></div>
+                
                 <div id="transcript-feed" class="transcript-container">
                     <!-- Transcripts will appear here -->
                     <div class="placeholder">Waiting for incoming audio...</div>
