--- a/static/index.html
+++ b/static/index.html
@@ -72,6 +72,10 @@
                             <label>Process Time</label>
                             <span id="process-time-stat">---</span>
                         </div>
+                        <div class="stat-item" title="Hardware device used for processing (GPU/CPU)">
+                            <label>Engine</label>
+                            <span id="engine-stat">---</span>
+                        </div>
                         <div class="stat-item" title="Audio stored in server buffer (available for playback/download)">
                             <label>Buffer</label>
                             <span id="buffer-size-stat">---</span>
