--- a/static/index.html
+++ b/static/index.html
@@ -44,7 +44,7 @@
                 </div>
                 <!-- System Alerts Container -->
                 <div id="system-alerts" class="alerts-container"></div>
-                
+
                 <div id="transcript-feed" class="transcript-container">
                     <!-- Transcripts will appear here -->
                     <div class="placeholder">Waiting for incoming audio...</div>
@@ -89,11 +89,11 @@
                         <div class="header-actions">
                             <button id="audio-processing-reset" class="btn-text">Reset</button>
                             <button id="audio-processing-collapse" class="btn-icon-small" title="Collapse/Expand">
-                                <span id="audio-processing-collapse-icon">−</span>
+                                <span id="audio-processing-collapse-icon">+</span>
                             </button>
                         </div>
                     </div>
-                    <div id="audio-processing-content">
+                    <div id="audio-processing-content" class="collapsed">
                         <div class="toggle-row">
                             <label for="audio-processing-enabled">Enable Processing</label>
                             <input type="checkbox" id="audio-processing-enabled">
